test/asm/max-errors.err
error: max-errors.asm(3):
    Expected constant expression: PC is not constant at assembly time
Assembly aborted after the maximum of 1 error! (configure with '-X/--max-errors')
