test/asm/max-errors.asm
section "s", rom0
db 42
println @ ; causes an error before println occurs
